# pathways

./: .gitconfig  .gitignore  LICENSE  MANIFEST.in  README.md  paper.bib  paper.md  pyproject.toml  pytest.ini  readthedocs.yaml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  main.yml
assets/: example.xlsx  workflow_diagram.pptx
conda/: conda_build_config.yaml  meta.yaml
dev/: GSA_generating_results.ipynb  PM 2020.xlsx  PM 2050.xlsx  STEM_to_Premise_SPS1.xlsx  Untitled.ipynb  act_categories_agg.yaml  cobalt_results.xlsx  convert_missings.py  converted_yaml.yaml  datapackage creation.ipynb  final_energy_mapping.xlsx  generate datapackages.ipynb  gsa.py  gsa_script.sh  merlin_script.sh  metals.ipynb  missing_classifications.csv  missing_classifications.xlsx  pivot.ipynb  program.prof  quantile.ipynb  sankey.ipynb  sankey_polyviz.ipynb  subshares.ipynb  sweet_sure.py  test double counting.ipynb  test-Nyle.ipynb  timing.py  timing2.py  update_LCIA_methods.py.ipynb  update_lcia_methods.py  variables.yaml
dev/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  datapackage creation-checkpoint.ipynb  generate datapackages-checkpoint.ipynb  pivot-checkpoint.ipynb  quantile-checkpoint.ipynb  sankey-checkpoint.ipynb  update_LCIA_methods.py-checkpoint.ipynb
dev/GSA Paper/: GSA_generating_results.ipynb  Pairwise scatter plots.ipynb  act_categories_agg_unique.yaml  delta_heatmap.ipynb  impacts_over_time.ipynb
dev/sample/: datapackage.json
docs/: api_reference.rst  conf.py  examples.rst  index.rst  quickstart.rst  requirements.txt  user_guide.rst
example/: example.html  example.ipynb
pathways/: __init__.py  data_validation.py  edges_matrix.py  filesystem_constants.py  jacobi_gmres_multi_lca.py  lca.py  lcia.py  logging_steup.py  pathways.py  sankey.py  stats.py  subshares.py  utils.py
tests/: test_data_validation.py  test_import.py  test_lca.py  test_lcia.py  test_pathways.py  test_utilities.py
(+30 files in other folders)
